fixed contrast issue on navbar

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -79,7 +79,7 @@
     }
 
     .active {
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.25);
         border-bottom: solid 2px #83619a5f;
     }
 
